; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/extr_builtin-diff.c_init_block_info.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/extr_builtin-diff.c_init_block_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block_info = type { i32, i32, i32, i32, i32, i32, %struct.symbol* }
%struct.symbol = type { i32 }
%struct.cyc_hist = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.block_info*, %struct.symbol*, %struct.cyc_hist*, i32)* @init_block_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_block_info(%struct.block_info* %0, %struct.symbol* %1, %struct.cyc_hist* %2, i32 %3) #0 {
  %5 = alloca %struct.block_info*, align 8
  %6 = alloca %struct.symbol*, align 8
  %7 = alloca %struct.cyc_hist*, align 8
  %8 = alloca i32, align 4
  store %struct.block_info* %0, %struct.block_info** %5, align 8
  store %struct.symbol* %1, %struct.symbol** %6, align 8
  store %struct.cyc_hist* %2, %struct.cyc_hist** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.symbol*, %struct.symbol** %6, align 8
  %10 = load %struct.block_info*, %struct.block_info** %5, align 8
  %11 = getelementptr inbounds %struct.block_info, %struct.block_info* %10, i32 0, i32 6
  store %struct.symbol* %9, %struct.symbol** %11, align 8
  %12 = load %struct.cyc_hist*, %struct.cyc_hist** %7, align 8
  %13 = getelementptr inbounds %struct.cyc_hist, %struct.cyc_hist* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.block_info*, %struct.block_info** %5, align 8
  %16 = getelementptr inbounds %struct.block_info, %struct.block_info* %15, i32 0, i32 5
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load %struct.block_info*, %struct.block_info** %5, align 8
  %19 = getelementptr inbounds %struct.block_info, %struct.block_info* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  %20 = load %struct.cyc_hist*, %struct.cyc_hist** %7, align 8
  %21 = getelementptr inbounds %struct.cyc_hist, %struct.cyc_hist* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.block_info*, %struct.block_info** %5, align 8
  %24 = getelementptr inbounds %struct.block_info, %struct.block_info* %23, i32 0, i32 4
  store i32 %22, i32* %24, align 8
  %25 = load %struct.cyc_hist*, %struct.cyc_hist** %7, align 8
  %26 = getelementptr inbounds %struct.cyc_hist, %struct.cyc_hist* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.block_info*, %struct.block_info** %5, align 8
  %29 = getelementptr inbounds %struct.block_info, %struct.block_info* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 4
  %30 = load %struct.cyc_hist*, %struct.cyc_hist** %7, align 8
  %31 = getelementptr inbounds %struct.cyc_hist, %struct.cyc_hist* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.block_info*, %struct.block_info** %5, align 8
  %34 = getelementptr inbounds %struct.block_info, %struct.block_info* %33, i32 0, i32 2
  store i32 %32, i32* %34, align 8
  %35 = load %struct.cyc_hist*, %struct.cyc_hist** %7, align 8
  %36 = getelementptr inbounds %struct.cyc_hist, %struct.cyc_hist* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.block_info*, %struct.block_info** %5, align 8
  %39 = getelementptr inbounds %struct.block_info, %struct.block_info* %38, i32 0, i32 1
  store i32 %37, i32* %39, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
